--- a/despeckle.ipynb
+++ b/despeckle.ipynb
@@ -37,11 +37,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pr_threshold = 0.009259\n",
-    "# pr 0,6,145\n",
-    "\n",
-    "specks = ds.where(ds > pr_threshold)\n",
-    "specks_removed = ds.where(ds.pr < pr_threshold)"
+    "var_name = 'pr'\n",
+    "threshold = 0.009259\n",
+    "# Known speckled grid cells for pr CNRM-CM5\n",
+    "# 0,6,145\n",
+    "# 0,455,675\n",
+    "# 0,456,675"
    ]
   },
   {
@@ -50,7 +51,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds['pr'][0,6,145]"
+    "# Remove the specks.\n",
+    "# This where() statement keeps everything below the threshold,\n",
+    "# and anything equal or above will be NaN.\n",
+    "specks_removed = ds.where(ds.pr < threshold)"
    ]
   },
   {
@@ -59,28 +63,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "specks_removed['pr'][0,6,145]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Now that we have the specks removed and replaced with NaNs, we can\n",
+    "# use interpolate_na() to interpolate just the NaN cells, using surrounding\n",
+    "# cells.\n",
+    "# interpolate_na() only works on a single dimension.\n",
+    "# To do bilinear filtering, we have to interpolate in both\n",
+    "# lat and lon dimensions, then combine the result\n",
     "interpolated_on_lat = specks_removed.interpolate_na(dim='lat')\n",
-    "interpolated_on_lon = specks_removed.interpolate_na(dim='lon')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "p = interpolated_on_lat*0.5 + interpolated_on_lon*0.5"
+    "interpolated_on_lon = specks_removed.interpolate_na(dim='lon')\n",
+    "interpolated = (interpolated_on_lat + interpolated_on_lon) * 0.5"
    ]
   },
   {
@@ -89,7 +80,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "z = ds.where(ds < pr_threshold, p)"
+    "# We can now write the data with interpolated cells\n",
+    "interpolated.to_netcdf(output_dir + 'pr_mrnbc_CNRM-CM5_rcp85_merge_interpna_lat_lon.nc4')"
    ]
   },
   {
@@ -98,7 +90,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "z.to_netcdf(output_dir + 'pr_mrnbc_CNRM-CM5_rcp85_merge_interpna_lat_lon.nc4')"
+    "# Each cell in the interpolated data was modified, though unaffected cells\n",
+    "# should maintain their original value (doubled, then halved).\n",
+    "# If we just wanted to apply the interpolated values to the affected\n",
+    "# cells, we can use where() again\n",
+    "output = xr.where(ds < threshold, ds, interpolated)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output.to_netcdf(output_dir + 'pr_mrnbc_CNRM-CM5_rcp85_merge_interpna_lat_lon_where.nc4')"
    ]
   },
   {
@@ -121,57 +126,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lats = ds['lat'].data\n",
-    "lons = ds['lon'].data\n",
+    "def naive_method():\n",
+    "    # This is a naive method where each grid cell at time=0 is looped over,\n",
+    "    # finding which cell is over the threshold, then performing an interp.\n",
+    "    # It's placed in a function for the sole purpose of avoid being run\n",
+    "    # when \"run all cells\" is used.\n",
+    "    lats = ds['lat'].data\n",
+    "    lons = ds['lon'].data\n",
     "\n",
-    "count = 0\n",
-    "for lati,lat in np.ndenumerate(lats):\n",
-    "    for loni,lon in np.ndenumerate(lons):\n",
-    "        if ds['pr'][0,lati[0],loni[0]].data > pr_threshold:\n",
-    "            d = ds.interp(lat=lat, lon=lon)['pr'].data\n",
-    "            ds['pr'][:,lati[0],loni[0]] = d\n",
-    "            count +=1\n",
-    "            print(count)"
+    "    for lati,lat in np.ndenumerate(lats):\n",
+    "        for loni,lon in np.ndenumerate(lons):\n",
+    "            if ds[var_name][0,lati[0],loni[0]].data > threshold:\n",
+    "                d = specks_removed.interp(lat=lat, lon=lon)[var_name].data\n",
+    "                ds[var_name][:,lati[0],loni[0]] = d"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds.to_netcdf(output_dir + 'pr_mrnbc_CNRM-CM5_rcp85_naive_interp.nc4')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
