feat: add tasmin

--- a/despeckle.ipynb
+++ b/despeckle.ipynb
@@ -19,7 +19,10 @@
     "input_dir = '/g/data/er4/vd5822/files_to_check/mrnbc_speckling/input/'\n",
     "output_dir = '/g/data/er4/vd5822/files_to_check/mrnbc_speckling/output/'\n",
     "\n",
-    "input_file = input_dir + 'pr_mrnbc_CNRM-CM5_rcp85.nc4'"
+    "file_name_base = 'pr_mrnbc_CNRM-CM5_rcp85.nc4'\n",
+    "#file_name_base = 'tasmin_mrnbc_CNRM-CM5_rcp85.nc4'\n",
+    "input_file = input_dir + file_name_base\n",
+    "output_file = output_dir + file_name_base"
    ]
   },
   {
@@ -39,10 +42,19 @@
    "source": [
     "var_name = 'pr'\n",
     "threshold = 0.009259\n",
-    "# Known speckled grid cells for pr CNRM-CM5\n",
+    "# Known speckled grid cells for pr CNRM-CM5 (time,lat,lon)\n",
     "# 0,6,145\n",
     "# 0,455,675\n",
-    "# 0,456,675"
+    "# 0,456,675\n",
+    "\n",
+    "#var_name = 'tasmin'\n",
+    "#threshold = 333.1\n",
+    "# Known speckled grid cells for pr CNRM-CM5 (time,lat,lon)\n",
+    "# 0,6,145\n",
+    "# 0,455,675\n",
+    "# 0,456,675\n",
+    "\n",
+    "# This location (0,417,260) is already NaN?"
    ]
   },
   {
@@ -54,7 +66,7 @@
     "# Remove the specks.\n",
     "# This where() statement keeps everything below the threshold,\n",
     "# and anything equal or above will be NaN.\n",
-    "specks_removed = ds.where(ds.pr < threshold)"
+    "specks_removed = ds.where(ds < threshold)"
    ]
   },
   {
@@ -81,7 +93,7 @@
    "outputs": [],
    "source": [
     "# We can now write the data with interpolated cells\n",
-    "interpolated.to_netcdf(output_dir + 'pr_mrnbc_CNRM-CM5_rcp85_merge_interpna_lat_lon.nc4')"
+    "interpolated.to_netcdf(output_file)"
    ]
   },
   {
@@ -102,9 +114,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "output.to_netcdf(output_dir + 'pr_mrnbc_CNRM-CM5_rcp85_merge_interpna_lat_lon_where.nc4')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
